<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".userLoginHandler">


    <Button
        android:id="@+id/loginasUser"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/loginUser"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:translationX="150dp"
        android:translationY="325dp"
        tools:layout_editor_absoluteY="451dp" />

    <Button
        android:id="@+id/loginAsVendor"
        android:layout_width="113dp"
        android:layout_height="37dp"
        android:background="@color/colorPrimary"
        android:text="@string/loginVendor"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:translationX="150dp"
        android:translationY="425dp"
        tools:layout_editor_absoluteY="451dp" />

    <EditText
        android:id="@+id/usernameID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:translationX="100dp"
        android:translationY="175dp" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:hint="@string/password"
        app:passwordToggleEnabled="true"
        android:translationX="100dp"
        android:translationY="225dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:ems="10"
            android:id="@+id/passwordID"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/newUserID"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:background="@android:color/background_light"
        android:text="@string/newUser"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorPrimary"
        android:translationX="110dp"
        android:translationY="500dp" />
</FrameLayout>